--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
   "scripts": {
-    "start": "expo start",
+    "start": "expo start -c",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.18.1",
+    "@retroachievements/api": "^1.1.1",
+    "@tanstack/react-query": "^4.29.1",
+    "clsx": "^1.2.1",
     "expo": "^48.0.7",
     "expo-constants": "~14.2.1",
     "expo-linking": "~4.0.1",
-    "expo-router": "^1.2.0",
+    "expo-router": "^1.5.3",
     "expo-splash-screen": "~0.18.1",
-    "expo-status-bar": "~1.4.2",
+    "expo-status-bar": "~1.4.4",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.3",
@@ -19,11 +24,15 @@
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-web": "~0.18.7"
+    "react-native-web": "~0.18.7",
+    "tailwind-merge": "^1.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
-    "@babel/plugin-proposal-export-namespace-from": "^7.18.9"
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "@types/react": "^18.0.35",
+    "tailwindcss": "^3.3.1",
+    "typescript": "^5.0.4"
   },
   "resolutions": {
     "metro": "^0.73.7",
