--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/react-native-action-sheet": "^4.0.1",
     "@react-native-async-storage/async-storage": "^1.18.1",
     "@retroachievements/api": "^1.1.1",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@shopify/flash-list": "^1.4.2",
     "@tanstack/react-query": "^4.29.1",
     "clsx": "^1.2.1",
     "expo": "^48.0.7",
@@ -20,6 +23,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.3",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
